# rdmeter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pixi.toml
.github/workflows/: c-cpp.yml
src/: bdrate.cpp  main.cpp  metrics.cpp  metrics.hpp  threading.hpp  yuv_reader.hpp
tests/: test_bdrate.cpp  test_metrics.cpp
